<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#ccecee">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicine_name"
        android:textColor="#063970"
        android:textSize="36sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_medicine_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medicine_hint"
        android:minHeight="48dp"
        android:textColor="#063970" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Expiry Date"
        android:layout_marginTop="16dp"
        android:textColor="#063970"
        android:textSize="36sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_expiry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="Click to pick date"
        android:minHeight="48dp"
        android:onClick="showDatePickerDialog"
        android:textColor="#063970"
        android:textColorHint="#455A64" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remind_before_expiry"
        android:layout_marginTop="16dp"
        android:textColor="#063970"
        android:textSize="24sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_start_reminder_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="e.g., 14"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#063970" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_interval"
        android:layout_marginTop="16dp"
        android:textColor="#063970"
        android:textSize="24sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_reminder_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="e.g., 5"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#063970" />

    <Button
        android:id="@+id/btn_save_medicine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save_medicine"
        android:backgroundTint="#96dce4"
        android:textColor="#063970"
        android:textSize="36sp"/>
</LinearLayout>