<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ccecee">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#96dce4"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/language_flag_button_profile"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:contentDescription="@string/language_flag_description"
                android:padding="8dp"
                android:backgroundTint="#ccecee"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_flag_armenia" />
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/full_name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/profile_image"
                android:fontFamily="@font/nunito"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/full_name_field"
                android:layout_marginLeft="40dp"
                android:layout_toRightOf="@+id/profile_image"
                android:fontFamily="@font/antic"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="-100dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#96dce4"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/tablets_13421834"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/medicine_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito"
                        android:includeFontPadding="false"
                        android:text="0"
                        android:textSize="20sp"
                        android:layout_centerInParent="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito"
                        android:text="@string/medicines"
                        android:textSize="14sp"
                        android:layout_below="@+id/medicine_balance"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#96dce4"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/medicine_chest"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/chest_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito"
                        android:includeFontPadding="false"
                        android:text="0"
                        android:textSize="20sp"
                        android:layout_centerInParent="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito"
                        android:text="@string/chests"
                        android:textSize="14sp"
                        android:layout_below="@+id/chest_count"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:layout_marginBottom="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/baseline_account_circle_24"
                    android:drawablePadding="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:layout_marginBottom="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/baseline_email_24"
                    android:drawablePadding="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_button"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/bungee"
                android:backgroundTint="#96dce4"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navmenu"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>